--- a/src/components/LLM.css
+++ b/src/components/LLM.css
@@ -53,3 +53,11 @@
     text-align: center;
     color: white;
   }
+
+  .llm-results{
+    text-align: center;
+    color:white;
+    font-size: 50px;
+    margin:20px;
+    margin-bottom:20px;
+  }
