--- a/src/components/Team.css
+++ b/src/components/Team.css
@@ -1,5 +1,5 @@
 .team-container {
-    background: url('../images/teamwork.jpeg') center center/cover no-repeat;
+    background: url('../images/team1.gif') center center/cover no-repeat;
     height: 86vh;
     width: 100%;
     display: flex;
